Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -45,4 +45,4 @@
 
 В большинстве современных дистрибутивов Linux и окружений рабочего стола съемные устройства автоматически монтируются в `/media/USER/LABEL` при подключении к системе, где `USER` - это имя пользователя, а `LABEL` - это метка устройства. Например, USB-накопитель с меткой `FlashDrive`, подключенный пользователем `john`, будет смонтирован в `/media/john/FlashDrive/`. То, как это делается, зависит от среды рабочего стола. 
 
-При этом всякий раз, когда вам нужно вручную смонтировать файловую систему, рекомендуется смонтировать ее в `/mnt`. Конкретные команды для управления монтированием и размонтированием файловых систем в Linux будут рассмотрены в другом уроке.
+При этом всякий раз, когда вам нужно *вручную* смонтировать файловую систему, рекомендуется смонтировать ее в `/mnt`. Конкретные команды для управления монтированием и размонтированием файловых систем в Linux будут рассмотрены в другом уроке.
