Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -59,3 +59,56 @@
 
 ### Загрузочный раздел (`/boot`)
 
+Загрузочный раздел содержит файлы, используемые загрузчиком для загрузки операционной системы. В системах Linux загрузчиком обычно является GRUB2 или, в более старых системах, GRUB Legacy. Раздел обычно монтируется в `/boot`, а его файлы хранятся в `/boot/grub`. 
+
+Технически загрузочный раздел не нужен, поскольку в большинстве случаев GRUB может монтировать корневой раздел (`/`) и загружать файлы из отдельного каталога `/boot`. 
+
+Тем не менее, отдельный загрузочный раздел может быть желателен для безопасности (обеспечение загрузки системы даже в случае сбоя корневой файловой системы), или если вы хотите использовать файловую систему, которую загрузчик не может понять в корневом разделе, или если она использует неподдерживаемый метод шифрования или сжатия. 
+
+Загрузочный раздел обычно является первым разделом на диске. Это связано с тем, что исходный BIOS IBM PC адресовал диски с использованием *цилиндров*, *головок* и *секторов* (CHS) с максимальным размером 1024 цилиндров, 256 головок и 63 секторов, что привеодит к максимальному размеру диска 528МБ (504МБ в MS-DOS). Это означает, что все, что выходит за рамки этой отметки, будет недоступно в устаревших системах, если не будет использована другая схема адресации диска (например, *логическая адресация блоков*, LBA). 
+
+Таким образом, для максимальной совместимости загрузочный раздел обычно расположен в начале диска и заканчивается перед 1024 цилиндром(528МБ), гарантируя, что несмотря ни на что, машина всегда сможет загрузить ядро. 
+
+Поскольку в загрузочном разделе хранятся только файлы, необходимые для загрузчика, начального RAM-диска и образов ядра, по сегодняшним меркам он может быть довольно маленьким. Хороший размер - около 300 МБ.
+
+
+### Системный раздел EFI (ESP)
+
+*Системный раздел EFI* (ESP) используется машинами на базе *Unified Extensible Firmware Interface* (UEFI) для хранения загрузчиков и образов ядра для установленных операционных систем. 
+
+Этот раздел отформатирован в файловой системе на основе FAT. На диске, разделенном таблицей разделов GUID, он имеет глобальный уникальный идентификатор `C12A7328-F81F-11D2-BA4B-00A0C93EC93B`. Если диск был отформатирован по схеме разделения MBR, идентификатор раздела - `0xEF`. 
+
+На машинах под управлением Microsoft Windows этот раздел обычно является первым на диске, хотя это и не требуется. ESP создается (или заполняется) операционной системой при установке, а в системе Linux монтируется в `/boot/efi`.
+
+
+### Раздел `/home`
+
+У каждого пользователя в системе есть домашний каталог для хранения личных файлов и настроек, и большинство из них находится в `/home`. Обычно домашний каталог совпадает с именем пользователя, поэтому у пользователя John будет его каталог в `/home/john`. 
+
+Однако бывают исключения. Например, домашним каталогом для пользователя root является `/root`, и некоторые системные службы могут связывать пользователей с домашними каталогами в другом месте. 
+
+Нет правила для определения размера раздела для каталога `/home`(домашнего раздела). Вы должны учитывать количество пользователей в системе и то, как она будет использоваться. Например, пользователю, который только просматривает веб-страницы и обрабатывает текст, потребуется меньше места, чем тому, кто работает с редактированием видео.
+
+
+### Изменяемые данные (`/var`)
+
+Этот каталог содержит «изменяемые данные» или файлы и каталоги, в которые система должна иметь возможность записи во время работы. Сюда входят системные журналы (в `/var/log`), временные файлы (`/var/tmp`) и кэшированные данные приложения (в `/var/cache`). 
+
+`/var/www/html` также является каталогом по умолчанию для файлов данных для веб-сервера Apache, а `/var/lib/mysql` - местом по умолчанию для файлов базы данных для сервера MySQL. Однако и то, и другое можно изменить. 
+
+Одна из веских причин для помещения `/var` в отдельный раздел - стабильность. Многие приложения и процессы записывают в `/var` и подкаталоги, например `/var/log` или `/var/tmp`. Некорректно работающий процесс может записывать данные до тех пор, пока в файловой системе не останется свободного места. 
+
+Если `/var` находится под `/`, это может вызвать панику ядра и повреждение файловой системы, что вызовет ситуацию, из которой будет сложно выйти. Но если `/var` хранится в отдельном разделе, корневая файловая система не пострадает. 
+
+Как и в `/home`, нет универсального правила для определения размера раздела для `/var`, так как он будет зависеть от того, как используется система. В домашней системе это может занять всего несколько гигабайт. Но на базе данных или веб-сервере может потребоваться гораздо больше места. В таких случаях может быть разумным поместить `/var` в раздел на другом диске, а не в корневом разделе, добавив дополнительный уровень защиты от сбоя физического диска.
+
+
+## Swap
+
+Раздел подкачки используется для перемещения страниц памяти из RAM на диск по мере необходимости. Этот раздел должен быть определенного типа и настроен с помощью соответствующей утилиты `mkswap`, прежде чем его можно будет использовать. 
+
+Раздел подкачки не может быть смонтирован, как другие, а это означает, что вы не можете получить к нему доступ, как к обычному каталогу, и просмотреть его содержимое. 
+
+В системе может быть несколько разделов подкачки (хотя это редкость), и Linux также поддерживает использование файлов подкачки вместо разделов, что может быть полезно для быстрого увеличения пространства подкачки, когда это необходимо. 
+
+Размер раздела подкачки - спорный вопрос. Старое правило из первых дней Linux («вдвое больше ОЗУ») может больше не применяться в зависимости от того, как используется система и от количества установленной физической ОЗУ. В документации по Red Hat Enterprise Linux 7 Red Hat рекомендует следующее:
