Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -3,7 +3,7 @@
 | **Сертификат:** | LPIC-1                                    |
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
-| **Тема:**       | 102 Установка Linux и управление пакетами |                           
+| **Тема:**       | 102 Установка Linux и управление пакетами |
 | **Цель:**       | 102.1 Дизайн разметки жесткого диска      |
 | **Урок:**       | 1 из 1                                    |
 
@@ -109,6 +109,22 @@
 
 Раздел подкачки не может быть смонтирован, как другие, а это означает, что вы не можете получить к нему доступ, как к обычному каталогу, и просмотреть его содержимое. 
 
-В системе может быть несколько разделов подкачки (хотя это редкость), и Linux также поддерживает использование файлов подкачки вместо разделов, что может быть полезно для быстрого увеличения пространства подкачки, когда это необходимо. 
+В системе может быть несколько разделов подкачки (хотя это редкость), и Linux также поддерживает использование *файлов* подкачки вместо разделов, что может быть полезно для быстрого увеличения пространства подкачки, когда это необходимо. 
 
-Размер раздела подкачки - спорный вопрос. Старое правило из первых дней Linux («вдвое больше ОЗУ») может больше не применяться в зависимости от того, как используется система и от количества установленной физической ОЗУ. В документации по Red Hat Enterprise Linux 7 Red Hat рекомендует следующее:
+Размер раздела подкачки - спорный вопрос. Старое правило из первых дней Linux («вдвое больше ОЗУ») может больше не применяться в зависимости от того, как используется система и от количества установленной физической ОЗУ. 
+
+В документации по Red Hat Enterprise Linux 7, Red Hat рекомендует следующее:
+
+| **Количество RAM** | **Рекомендуемый размер swap** | **Рекомендуемый размер Swap с гибернацией** |
+|:-------------------|:------------------------------|:--------------------------------------------|
+| < 2GB RAM          | В 2 раза больше чем объем RAM | В 3 раза больше чем объем RAM               |
+| 2-8GB RAM          | Равно объему RAM              | В 2 раза больше чем объем RAM               |           
+| 8-64GB RAM         | Не менее 4GB                  | В 1,5 раза больше чем объем RAM             |
+| > 64GB RAM         | Не менее 4GB                  | Не рекомендуется                            |
+
+Конечно, объем подкачки может зависеть от рабочей нагрузки. Если на машине работает критически важная служба, такая как база данных, веб-сервер или сервер SAP, целесообразно проверить документацию для этих служб (или вашего поставщика программного обеспечения) для получения рекомендаций.
+> Для получения дополнительной информации о создании и включении разделов подкачки и файлов подкачки см. Урок 104.1 LPIC-1.
+
+
+## LVM
+
