Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -128,3 +128,19 @@
 
 ## LVM
 
+Мы уже обсуждали, что диски организовываются в один или несколько разделов, причем каждый раздел содержит файловую систему, которая описывает, как хранятся файлы и связанные с ними метаданные. Одним из недостатков разбиения на разделы является то, что системный администратор должен заранее решить, как будет распределяться доступное дисковое пространство на устройстве. Это может вызвать некоторые проблемы позже, если раздел требует больше места, чем планировалось изначально. Конечно, размер разделов можно изменить, но это может быть невозможно, если, например, на диске нет свободного места. 
+
+*Управление логическими томами* (LVM) - это форма виртуализации хранилища, которая предлагает системным администраторам более гибкий подход к управлению дисковым пространством, чем традиционное разбиение на разделы. Цель LVM - облегчить управление потребностями конечных пользователей в хранении. Базовая единица - это *физический том* (PV), который представляет собой блочное устройство в вашей системе, такое как раздел диска или массив RAID. 
+
+PV группируются в *группы томов* (VG), которые абстрагируют базовые устройства и рассматриваются как единое логическое устройство с объединенной емкостью накопителя PV компонентов. 
+
+Каждый том в группе томов делится на части фиксированного размера, называемые *экстентами*. Экстенты на PV называются *физическими экстентами* (PE), а на логическом томе - *логическими экстентами* (LE). Как правило, каждый логический экстент сопоставляется с физическим экстентом, но это может измениться, если используются такие функции, как зеркалирование диска. 
+
+Группы томов можно разделить на логические тома (LV), которые функционально работают аналогично разделам, но с большей гибкостью. 
+
+Размер логического тома, указанный при его создании, фактически определяется размером физических экстентов (по умолчанию 4 МБ), умноженным на количество экстентов на томе. Отсюда легко понять, что, например, для увеличения логического тома все, что нужно сделать системному администратору, - это добавить дополнительные экстенты из пула, доступного в группе томов. Точно так же можно удалить экстенты, чтобы уменьшить LV. 
+
+После создания логического тома он воспринимается операционной системой как обычное блочное устройство. В `/dev` будет создано устройство с именем `/dev/VGNAME/LVNAME`, где `VGNAME` - это имя группы томов, а `LVNAME` - имя логического тома. 
+
+Эти устройства можно отформатировать в соответствии с нужной файловой системой с помощью стандартных утилит (например, `mkfs.ext4`) и смонтировать обычными методами, вручную с помощью команды `mount` или автоматически, добавив их в файл `/etc/fstab`.
+
