Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -144,3 +144,79 @@ PV группируются в *группы томов* (VG), которые а
 
 Эти устройства можно отформатировать в соответствии с нужной файловой системой с помощью стандартных утилит (например, `mkfs.ext4`) и смонтировать обычными методами, вручную с помощью команды `mount` или автоматически, добавив их в файл `/etc/fstab`.
 
+
+## Упражнения для закрепления
+
+1. Где хранятся файлы для загрузчика GRUB в системах Linux? 
+
+2. Где должен заканчиваться загрузочный раздел, чтобы компьютер всегда мог загрузить ядро? 
+
+3. Где обычно монтируется раздел EFI? 
+
+4. При монтировании файловой системы вручную, в какой каталог она обычно монтируется?
+
+
+## Упражнения на размышление
+
+1. Какая самая маленькая единица в группе томов? 
+
+2. Как определяется размер логического тома? 
+
+3. Какой идентификатор системного раздела EFI на диске, отформатированном по схеме разделения MBR? 
+
+4. Как, помимо разделов подкачки, быстро увеличить пространство подкачки в системе Linux?
+
+
+## Резюме
+
+В этом уроке вы узнали о разбиении на разделы, о том, какие каталоги обычно хранятся в отдельных разделах и почему это делается. Кроме того, мы обсудили LVM (управление логическими томами) и то, что он может предложить более гибкий способ распределения ваших данных и дискового пространства по сравнению с традиционным разбиением. 
+
+Обсуждались следующие файлы, термины и утилиты: 
+* `/`  
+Корневая файловая система Linux. 
+* `/var`  
+Стандартное место для «изменчивых данных», данных, которые со временем могут уменьшаться и увеличиваться. 
+* `/home`  
+Стандартный родительский каталог для домашних каталогов обычных пользователей системы. 
+* `/boot`  
+Стандартное расположение файлов загрузчика, ядра Linux и начального RAM-диска. 
+
+* Системный раздел EFI (ESP)  
+Используется системами, в которых реализован UEFI, для хранения загрузочных файлов системы. 
+* Swap  
+Используется для выгрузки страниц памяти ядра при интенсивном использовании ОЗУ. 
+* Точки монтирования  
+Расположение каталога, к которому будет подключено устройство (например, жесткий диск). 
+* Партиции  
+Разделы на жестком диске.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Где хранятся файлы для загрузчика GRUB в системах Linux?**
+В `/boot/grub`.
+
+**2. Где должен заканчиваться загрузочный раздел, чтобы компьютер всегда мог загрузить ядро?**
+Перед 1024 цилиндром.
+
+**3. Где обычно монтируется раздел EFI?**
+В `/boot/efi`.
+
+**4. При монтировании файловой системы вручную, в какой каталог она обычно монтируется?**
+в `/mnt`. Однако это не обязательно. Вы можете смонтировать раздел в любом каталоге.
+
+
+## Ответы на упражнения для размышления
+
+
+**1. Какая самая маленькая единица в группе томов?**
+Группы томов подразделяются на экстенты.
+
+**2. Как определяется размер логического тома?**
+На размер физических экстентов, умноженный на количество экстентов на томе.
+
+**3. Какой идентификатор системного раздела EFI на диске, отформатированном по схеме разделения MBR?**
+Идентификатор - 0xEF.
+
+**4. Как, помимо разделов подкачки, быстро увеличить пространство подкачки в системе Linux?**
+Можно использовать файлы подкачки.
