Update 102.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
@@ -1,12 +1,189 @@
-# 102.1 Урок 1
+# 102.2 Урок 1
 
 | **Сертификат:** | LPIC-1                                    |
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
 | **Тема:**       | 102 Установка Linux и управление пакетами |
-| **Цель:**       | 102.1 Установка диспетчера загрузки       |
+| **Цель:**       | 102.2 Установка диспетчера загрузки       |
 | **Урок:**       | 1 из 1                                    |
 
 
 ## Введение
 
+Когда компьютер включается, первое запускаемое программное обеспечение - это загрузчик. Это фрагмент кода, единственная цель которого - загрузить ядро операционной системы и передать ему управление. Ядро загрузит необходимые драйвера, инициализирует оборудование, а затем загрузит остальную часть операционной системы. 
+
+GRUB - это загрузчик, используемый в большинстве дистрибутивов Linux. Он может загружать ядро Linux или другие операционные системы, такие как Windows, и может обрабатывать несколько образов и параметров ядра как отдельные пункты меню. Выбор ядра при загрузке осуществляется через интерфейс, управляемый клавиатурой, и есть интерфейс командной строки для редактирования опций и параметров загрузки. 
+
+Большинство дистрибутивов Linux устанавливают и настраивают GRUB (фактически, GRUB 2) автоматически, поэтому обычному пользователю не нужно об этом думать. Однако системному администратору жизненно важно знать, как управлять процессом загрузки, чтобы вы могли восстановить систему после сбоя загрузки, например, после неудачного обновления ядра. В этом уроке вы узнаете, как установить, настроить и взаимодействовать с GRUB.
+
+
+## GRUB Legacy или GRUB2
+
+Первоначальная версия GRUB (Grand Unified Bootloader), теперь известная как GRUB Legacy, была разработана в 1995 году как часть проекта GNU Hurd, а затем была принята в качестве загрузчика по умолчанию для многих дистрибутивов Linux, заменив более ранние альтернативы, такие как LILO. 
+
+GRUB2 - это полностью переписанный GRUB с целью сделать его чище, безопаснее, надежнее и мощнее. Среди многих преимуществ перед GRUB Legacy - гораздо более гибкий файл конфигурации (с большим количеством команд и условных операторов, похожий на язык сценариев), более модульный дизайн и лучшая локализация/интернационализация. 
+
+Также есть поддержка тем и графических меню загрузки с экранами-заставками, возможность загружать ISO-образы LiveCD непосредственно с жесткого диска, улучшенная поддержка архитектур, отличных от x86, универсальная поддержка UUID (упрощающая идентификацию дисков и разделов) и многое другое. 
+
+GRUB Legacy больше не находится в активной разработке (последний выпуск был 0.97 в 2005 году), и сегодня большинство основных дистрибутивов Linux устанавливают GRUB2 в качестве загрузчика по умолчанию. Однако вы все еще можете найти системы, использующие GRUB Legacy, поэтому важно знать, как его использовать и чем он отличается от GRUB2.
+
+
+## Где находится загрузчик?
+
+Исторически жесткие диски в IBM PC-совместимых системах были разделены с использованием схемы разделения MBR, созданной в 1982 году для IBM PC-DOS (MS-DOS) 2.0. 
+
+В этой схеме первый 512-байтовый сектор диска называется главной загрузочной записью и содержит таблицу, описывающую разделы на диске (таблица разделов), а также код начальной загрузки, называемый загрузчиком. 
+
+Когда компьютер включается, этот минимальный(из-за ограничений размера) код загрузчика загружается, выполняется и передает управление вторичному загрузчику на диске, обычно расположенному в пространстве 32КБ между MBR и первым разделом, который в свою очередь загрузит операционную систему. 
+
+На диске с разделами MBR загрузочный код для GRUB устанавливается в MBR. Он загружает и передает управление образу «ядра», установленному между MBR и первым разделом. С этого момента GRUB может загружать с диска остальные необходимые ресурсы (меню, файлы конфигурации и дополнительные модули). 
+
+Однако MBR имеет ограничения на количество разделов (первоначально максимум 4 основных раздела, позже максимум 3 основных раздела с 1 расширенным разделом, разделенным на несколько логических разделов) и максимальный размер диска в 2ТБ. Чтобы преодолеть эти ограничения, была создана новая схема разбиения под названием GPT(*таблица разделов GUID*), часть стандарта UEFI (*Unified Extensible Firmware Interface*). 
+
+Диски с разделами GPT можно использовать как с компьютерами с традиционным PC BIOS, так и с прошивкой UEFI. На машинах с BIOS вторая часть GRUB хранится в специальном загрузочном разделе BIOS. 
+
+В системах с прошивкой UEFI GRUB загружается прошивкой из файлов `grubia32.efi` (для 32-битных систем) или `grubx64.efi` (для 64-битных систем) из раздела, называемого ESP (*системный раздел EFI*).
+
+
+## Раздел `/boot`
+
+В Linux файлы, необходимые для процесса загрузки, обычно хранятся в загрузочном разделе, монтируются в корневой файловой системе и обычно называются `/boot`. 
+
+В текущих системах загрузочный раздел не требуется, так как загрузчики, такие как GRUB, обычно могут монтировать корневую файловую систему и искать необходимые файлы внутри каталога `/boot`, но это хорошая практика, поскольку они разделяют файлы, необходимые для процесса загрузки от остальной файловой системы. 
+
+Этот раздел обычно является первым на диске. Это связано с тем, что исходный BIOS IBM PC адресовал диски с использованием *цилиндров*, *головок* и *секторов* (CHS) с максимальным размером 1024 цилиндров, 256 головок и 63 секторов, в результате чего максимальный размер диска составлял 528МБ (504 МБ в MS-DOS). Это означает, что все, что выходит за рамки этой отметки, будет недоступно, если не будет использована другая схема адресации диска (например, LBA, *логическая адресация блоков*). 
+
+Таким образом, для максимальной совместимости раздел `/boot` обычно расположен в начале диска и заканчивается перед 1024 цилиндром (528МБ), что гарантирует, что машина всегда сможет загрузить ядро. Рекомендуемый размер этого раздела на текущей машине - 300 МБ. 
+
+Другими причинами для отдельного раздела `/boot` являются шифрование и сжатие, поскольку некоторые методы могут еще не поддерживаться GRUB2, или если вам нужно отформатировать системный корневой раздел (`/`) с использованием неподдерживаемой файловой системы.
+
+
+### Содержимое загрузочного раздела
+
+Содержимое раздела `/boot` может различаться в зависимости от архитектуры системы или используемого загрузчика, но в системе на базе x86 вы обычно найдете файлы, указанные ниже. Большинство из них имеют суффикс `-VERSION`, где `-VERSION` - это версия соответствующего ядра Linux. Так, например, файл конфигурации для ядра Linux версии `4.15.0-65-generic` будет называться `config-4.15.0-65-generic`. 
+
+Файл конфигурации  
+Этот файл, обычно называемый `config-VERSION` (см. Пример выше), хранит параметры конфигурации для ядра Linux. Этот файл создается автоматически при компиляции или установке нового ядра и не должен напрямую изменяться пользователем. 
+
+Системная карта  
+Этот файл представляет собой таблицу поиска, сопоставляющую имена символов (например, переменных или функций) с их соответствующей позицией в памяти. Это полезно при отладке системного сбоя, известного как паника ядра, поскольку позволяет пользователю узнать, какая переменная или функция вызывалась, когда произошел сбой. Как и у файла конфигурации, имя обычно `System.map-VERSION`(например, `System.map-4.15.0-65-generic`). 
+
+Ядро Linux  
+Это собственно ядро операционной системы. Обычно это имя `vmlinux-VERSION`(например, `vmlinux-4.15.0-65-generic`). Вы также можете найти имя `vmlinuz` вместо `vmlinux`, буква `z` в конце означает, что файл был сжат. 
+
+Начальный RAM-диск  
+Обычно это называется `initrd.img-VERSION` и содержит минимальную корневую файловую систему, загруженную на RAM-диск, содержащую утилиты и модули ядра, необходимые для того, чтобы ядро могло смонтировать настоящую корневую файловую систему. Файлы, связанные с загрузчиком В системах с установленным GRUB они обычно находятся в `/boot/grub` и включают файл конфигурации GRUB(`/boot/grub/grub.cfg` для GRUB2 или `/boot/grub/menu.lst` в случае GRUB Legacy), модули (в `/boot/grub/i386-pc`), файлы перевода (в `/boot/grub/locale`) и шрифты (в `/boot/grub/fonts`).
+
+
+## GRUB2
+
+
+### Установка GRUB2
+
+GRUB2 можно установить с помощью утилиты `grub-install`. Если у вас не загружаемая система, вам нужно будет загрузиться с Live CD или аварийного диска, выяснить, какой раздел является загрузочным для вашей системы, смонтировать его и затем запустить утилиту.
+
+> Команды ниже предполагают, что вы вошли в систему как root. Если нет, то сначала запустите `sudo su` - чтобы «стать» root. По завершении введите `exit`, чтобы выйти из системы и вернуться к обычному пользователю.
+
+Первый диск в системе обычно является *загрузочным устройством*, и вам может потребоваться узнать, есть ли на диске *загрузочный раздел*. Это можно сделать с помощью утилиты `fdisk`. Чтобы перечислить все разделы на первом диске вашей машины, используйте:
+```console
+# fdisk -l /dev/sda
+Disk /dev/sda: 111,8 GiB, 120034123776 bytes, 234441648 sectors
+Units: sectors of 1 * 512 = 512 bytes
+Sector size (logical/physical): 512 bytes / 512 bytes
+I/O size (minimum/optimal): 512 bytes / 512 bytes
+Disklabel type: dos
+Disk identifier: 0x97f8fef5
+
+Device     Boot    Start       End   Sectors   Size Id Type
+/dev/sda1  *        2048   2000895   1998848   976M 83 Linux
+/dev/sda2        2002942 234440703 232437762 110,9G  5 Extended
+/dev/sda5        2002944  18008063  16005120   7,6G 82 Linux swap / Solaris
+/dev/sda6       18010112 234440703 216430592 103,2G 83 Linux
+```
+Загрузочный раздел помечен `*` под столбцом загрузки. В приведенном выше примере это `/dev/sda1`. Теперь создайте временный каталог в `/mnt` и смонтируйте раздел в нем:
+```console
+# mkdir /mnt/tmp
+# mount /dev/sda1 /mnt/tmp
+```
+Затем запустите `grub-install`, указав ему на загрузочное устройство (а не на раздел) и каталог, в котором смонтирован загрузочный раздел. Если в вашей системе есть выделенный загрузочный раздел, используйте следующую команду:
+```console
+# grub-install --boot-directory=/mnt/tmp /dev/sda1
+```
+Если вы выполняете установку в системе, в которой нет загрузочного раздела, а есть только каталог `/boot` в корневой файловой системе, укажите на него `grub-install`. Итак, команда такая:
+```console
+# grub-install --boot-directory=/boot /dev/sda1
+```
+
+
+### Настройка GRUB2
+
+Файл конфигурации по умолчанию для GRUB2 - `/boot/grub/grub.cfg`. Этот файл создается автоматически, и ручное редактирование не рекомендуется. Чтобы внести изменения в конфигурацию GRUB, вам необходимо отредактировать файл `/etc/default/grub`, а затем запустить утилиту `update-grub` для создания совместимого файла.
+
+>`update-grub` обычно является ярлыком для `grub-mkconfig -o /boot/grub/grub.cfg`, поэтому они дают те же результаты.
+
+В файле `/etc/default/grub` есть несколько параметров, которые управляют поведением GRUB2, например, ядро по умолчанию для загрузки, тайм-аут, дополнительные параметры командной строки и т. д. Наиболее важными из них являются: 
+
+* `GRUB_DEFAULT =*  
+Пункт меню по умолчанию для загрузки. Это может быть числовое значение (например, `0`, `1` и т. д.), Имя пункта меню (например, `debian`) или сохраненное, которое используется вместе с `GRUB_SAVEDEFAULT =`, как описано ниже. Имейте в виду, что пункты меню начинаются с нуля, поэтому первая запись меню - `0`, вторая - `1` и т. д.
+
+* `GRUB_SAVEDEFAULT =`  
+Если для этого параметра установлено значение `true`, а для параметра `GRUB_DEFAULT =` установлено значение `saved`, то параметр загрузки по умолчанию всегда будет последним, выбранным в меню загрузки. 
+
+* `GRUB_TIMEOUT =`  
+Тайм-аут в секундах до выбора пункта меню по умолчанию. Если установлено значение `0`, система загрузит запись по умолчанию без отображения меню. Если установлено значение `-1`, система будет ждать, пока пользователь выберет вариант, независимо от того, сколько времени это займет. 
+
+* `GRUB_CMDLINE_LINUX =`  
+В нем перечислены параметры командной строки, которые будут добавлены в записи для ядра Linux. 
+
+* `GRUB_CMDLINE_LINUX_DEFAULT =`  
+По умолчанию для каждого ядра Linux создаются две записи меню, одна с параметрами по умолчанию и одна запись для восстановления. С помощью этой опции вы можете добавить дополнительные параметры, которые будут добавлены только к записи по умолчанию. 
+
+* `GRUB_ENABLE_CRYPTODISK =`  
+Если установлено значение `y`, такие команды, как `grub-mkconfig`, `update-grub` и `grub-install`, будут искать зашифрованные диски и добавлять команды, необходимые для доступа к ним во время загрузки. Это отключает автоматическую загрузку (`GRUB_TIMEOUT =` с любым значением, отличным от `-1`), потому что для дешифрования дисков до того, как к ним можно будет получить доступ, требуется кодовая фраза.
+
+
+### Управление пунктами меню
+
+При запуске `update-grub` GRUB2 просканирует на компьютере ядра и операционные системы и сгенерирует соответствующие записи меню в файле `/boot/grub/grub.cfg`. Новые записи можно вручную добавлять в файлы сценариев в каталоге `/etc/grub.d`. 
+
+Эти файлы должны быть исполняемыми и обрабатываются `update-grub` в числовом порядке. Следовательно, `05_debian_theme` обрабатывается до `10_linux` и так далее. Пользовательские пункты меню обычно добавляются в файл `40_custom`. Базовый синтаксис для входа в меню показан ниже:
+```console
+menuentry "Default OS" {
+    set root=(hd0,1)
+    linux /vmlinuz root=/dev/sda1 ro quiet splash
+    initrd /initrd.img
+}
+```
+Первая строка всегда начинается с `menuentry` и заканчивается `{`. Текст в кавычках будет отображаться как метка входа в меню загрузки GRUB2. 
+
+Параметр `set root` определяет диск и раздел, в котором расположена корневая файловая система операционной системы. Обратите внимание, что в GRUB2 диски нумеруются с нуля, поэтому `hd0` - это первый диск (`sda` в Linux), `hd1` - второй и так далее. Однако разделы нумеруются, начиная с единицы. В приведенном выше примере корневая файловая система расположена на первом диске (`hd0`), первом разделе (`,1`) или `sda1`. 
+
+Вместо прямого указания устройства и раздела вы также можете настроить GRUB2 для поиска файловой системы с определенной меткой или UUID (`универсальный уникальный идентификатор`). Для этого используйте параметр `search --set = root`, за которым следует параметр `--label` и метка файловой системы для поиска, или `--fs-uuid`, за которым следует UUID файловой системы. 
+
+Вы можете найти UUID файловой системы с помощью следующей команды:
+```console
+$ ls -l /dev/disk/by-uuid/
+total 0
+lrwxrwxrwx 1 root root 10 nov  4 08:40 3e0b34e2-949c-43f2-90b0-25454ac1595d -> ../../sda5
+lrwxrwxrwx 1 root root 10 nov  4 08:40 428e35ee-5ad5-4dcb-adca-539aba6c2d84 -> ../../sda6
+lrwxrwxrwx 1 root root 10 nov  5 19:10 56C11DCC5D2E1334 -> ../../sdb1
+lrwxrwxrwx 1 root root 10 nov  4 08:40 ae71b214-0aec-48e8-80b2-090b6986b625 -> ../../sda1
+```
+В приведенном выше примере UUID для `/dev/sda1` - `ae71b214-0aec-48e8-80b2-090b6986b625`. Если вы хотите установить его в качестве корневого устройства для GRUB2, команда будет выглядеть так: `search --set = root --fs-uuid ae71b214-0aec-48e8-80b2-090b6986b625`. 
+
+При использовании команды поиска обычно добавляют параметр `--no-floppy`, чтобы GRUB не тратил время на поиск на дискетах. 
+
+Строка `linux` указывает, где находится ядро операционной системы (в данном случае файл `vmlinuz` в корне файловой системы). После этого вы можете передать ядру параметры командной строки. 
+
+В приведенном выше примере мы указали корневой раздел (`root=/dev/sda1`) и передали три параметра ядра: корневой раздел должен быть смонтирован только для чтения (`ro`), большинство сообщений журнала должно быть отключено (`quiet`) и заставка экрана должен быть показана (`splash`). 
+
+Строка `initrd` указывает, где находится исходный RAM-диск. В приведенном выше примере это файл `initrd.img`, расположенный в корне файловой системы.
+
+>Большинство дистрибутивов Linux фактически не помещают ядро и initrd в корневой каталог корневой файловой системы. Вместо этого это ссылки на фактические файлы внутри каталога или раздела `/boot`.
+
+Последняя строка пункта меню должна содержать только символ `}`.
+
+
+### Взаимодействие с GRUB2
+
+При загрузке системы с GRUB2 вы увидите меню параметров. Используйте клавиши со стрелками, чтобы выбрать параметр, и <kbd>Enter</kbd>, чтобы подтвердить и загрузить выбранную запись.
