Update 102.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.2 Install a boot manager/102.2 Lesson 1.md
@@ -187,3 +187,72 @@ lrwxrwxrwx 1 root root 10 nov  4 08:40 ae71b214-0aec-48e8-80b2-090b6986b625 -> .
 ### Взаимодействие с GRUB2
 
 При загрузке системы с GRUB2 вы увидите меню параметров. Используйте клавиши со стрелками, чтобы выбрать параметр, и <kbd>Enter</kbd>, чтобы подтвердить и загрузить выбранную запись.
+
+>Если вы видите только обратный отсчет, но не меню, нажмите <kbd>Shift</kbd>, чтобы открыть меню.
+
+Чтобы отредактировать параметр, выберите его с помощью клавиш со стрелками и нажмите <kbd>E</kbd>. Откроется окно редактора с содержимым элемента меню, связанного с этим параметром, как определено в `/boot/grub/grub.cfg`.
+
+После редактирования параметра нажмите <kbd>Ctrl</kbd>+<kbd>X</kbd> или <kbd>F10</kbd> для загрузки или <kbd>Esc</kbd> для возврата в меню. 
+
+Чтобы войти в оболочку GRUB2, нажмите <kbd>C</kbd> на экране меню (или <kbd>Ctrl</kbd>+<kbd>C</kbd>) в окне редактирования). Вы увидите такую командную строку: `grub>` 
+
+Введите `help`, чтобы увидеть список всех доступных команд, или нажмите <kbd>Esc</kbd>, чтобы выйти из оболочки и вернуться к экрану меню.
+
+>Помните, что это меню не появится, если для `GRUB_TIMEOUT` установлено значение `0` в `/etc/default/grub`
+
+
+### Загрузка из оболочки GRUB2
+
+Вы можете использовать оболочку GRUB2 для загрузки системы в случае, если неправильная конфигурация в пункте меню приведет к сбою. 
+
+Первое, что вам нужно сделать, это выяснить, где находится загрузочный раздел. Вы можете сделать это с помощью команды `ls`, которая покажет вам список разделов и дисков, обнаруженных GRUB2.
+```console
+grub> ls
+(proc) (hd0) (hd0,msdos1)
+```
+В приведенном выше примере все просто. Есть только один диск (`hd0`) с одним разделом на нем: (`hd0,msdos1`). 
+
+Перечисленные диски и разделы в вашей системе будут другими. В нашем примере первый раздел `hd0` называется `msdos1`, потому что диск был разбит на разделы с использованием схемы разделения MBR. Если бы он был разделен с помощью GPT, имя было бы `gpt1`. 
+
+Для загрузки Linux нам понадобится ядро и начальный RAM-диск (`initrd`). Проверим содержимое (`hd0,msdos1`):
+```console
+grub> ls (hd0,msdos1)/
+lost+found/ swapfile etc/ media/ bin/ boot/ dev/ home/ lib/ lib64/ mnt/ opt/ proc/ root/ run/ sbin/ srv/ sys/ tmp/ usr/ var/ initrd.img initrd.img.old vmlinuz cdrom/
+```
+Вы можете добавить параметр `-l` к `ls`, чтобы получить длинный список, аналогичный тому, который вы получили бы в терминале Linux. Используйте <kbd>Tab</kbd> для автозаполнения имен дисков, разделов и имен файлов. 
+
+Обратите внимание, что у нас есть образы ядра (`vmlinuz`) и initrd (`initrd.img`) прямо в корневом каталоге. Если нет, мы можем проверить содержимое `/boot` с помощью `list` (`hd0,msdos1`) `/boot/`. 
+
+Теперь установите загрузочный раздел:
+```console
+grub> set root=(hd0,msdos1)
+```
+Загрузите ядро Linux с помощью команды `linux`, за которой следует путь к ядру и параметр `root=`, чтобы указать ядру, где находится корневая файловая система для операционной системы.
+```console
+grub> linux /vmlinuz root=/dev/sda1
+```
+Загрузите начальный RAM-диск с помощью `initrd`, после чего укажите полный путь к файлу `initrd.img`:
+```console
+grub> initrd /initrd.img
+```
+Теперь загрузите систему с помощью `boot`.
+
+
+### Загрузка из Rescue Shell
+
+В случае сбоя загрузки GRUB2 может загрузить Rescue Shell, упрощенную версию оболочки, о которой мы упоминали ранее. Вы узнаете это по командной строке, которая отображается как `grub rescue>`. 
+
+Процесс загрузки системы из этой оболочки почти такой же, как показано ранее. Однако вам нужно будет загрузить несколько модулей GRUB2, чтобы все заработало. 
+
+После определения того, какой раздел является загрузочным (с помощью `ls`, как показано ранее), используйте команду `set prefix=`, за которой следует полный путь к каталогу, содержащему файлы GRUB2. Обычно `/boot/grub`. В нашем примере:
+```console
+grub rescue> insmod normal
+grub rescue> insmod linux
+```
+Затем установите загрузочный раздел с помощью `set root=`, как указано ранее, загрузите ядро Linux (с Linux), начальный RAM-диск (`initrd`) и попробуйте загрузиться при помощи `boot`.
+
+
+## GRUB Legacy
+
+### Установка GRUB Legacy из работающей системы
+
